<resources>
    <string name="app_name">EnjoyLaunchForSalaryMan</string>
    <string name="activity_add_launch_name">점심 등록</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_store_name">가게이름</string>
    <string name="hint_date">식사시간</string>
    <string name="hint_menu">메뉴</string>
    <string name="hint_price">가격</string>
    <string name="add_launch_button_text">등록</string>
    <string name="satisfaction_point_text">만족도 : </string>
    <string name="hunger_point_text">식사전 배고픔 : </string>
</resources>
